# ucdavis-3D-analyzer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.229ac20  CMakeLists2.txt  README.md
UML/: plan.uxf
data_cache/: datapoints.json
include/UCDavis3DAnalyzer/: amalgamated.h  config.h  occView.h  osisoft_pi_api.h  view3DMap.h
resources/: credits.txt  icons_utility.qrc  occqt.qrc
resources/map_model/map/: davis.stl
resources/model_buildings/: AutoSave_chemmodel[1].skp  Bainer+hall.skp  Campus_Model-scilabfinal3[1].skp  Dutton+Hall.skp  Genome.kmz  Haring+Shell.skp  Hunt+Hall-IP.skp  Kerr+Hall.kmz  The+Silo.skp  water_tower.skp
share/: presentation.pptx
src/UCDavis3DAnalyzerUI/: aconf.h  amalgamated.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  occQt.ui  occView.cpp  osisoft_pi_api.cpp  view3DMap.cpp
src/UI/: Application.cpp  Application.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  main.ui  universalInclude.hpp
src/core/: config.hpp
src/plugins/: CMakeLists.txt
src/plugins/MapViewerOCC/: CMakeLists.txt  MainWidget.cpp  MainWidget.hpp  Shapes.cpp  Shapes.hpp  universalInclude.hpp  universalInclude.hpp.autosave
src/plugins/UCD3DEM_Manager/: CMakeLists.txt  MainWidget.cpp  MainWidget.hpp  universalInclude.hpp  view3DMap.cpp  view3DMap.hpp
src/plugins/UCD_OSI_Data/: CMakeLists.txt  MainWidget.cpp  MainWidget.hpp  universalInclude.hpp
